tests/baselines/reference/collisionThisExpressionAndAliasInGlobal.errors.txt
==== tests/cases/compiler/collisionThisExpressionAndAliasInGlobal.ts (1 errors) ====
    module a {
        export var b = 10;
    }
    var f = () => this;
    import _this = a; // Error
           ~~~~~
!!! error TS2399: Duplicate identifier '_this'. Compiler uses variable declaration '_this' to capture 'this' reference.